--- a/Makefile.msvc-x64
+++ b/Makefile.msvc-x64
@@ -1,4 +1,4 @@
-all: output\debug\ddlparser.lib output\release\ddlparser.lib ddlt\ddlt.exe test\test.exe test\test_nacl.exe
+all: output\debug\ddlparser.lib output\release\ddlparser.lib ddlt\ddlt.exe test\test.exe test\test_nacl.exe README README.html README.md
 
 ##       ##       #### ########  ########     ###    ########  ##    ##
 ####     ##        ##  ##     ## ##     ##   ## ##   ##     ##  ##  ##
@@ -179,6 +179,23 @@ test\test_nacl.exe: test\test_nacl.obj test\test_nacl_ddl.obj
 	link /nologo /subsystem:console /out:$@ $**
 	echo "Running test_nacl..."
 	test\test_nacl
+
+##       ########   #######   ######  ##     ## ##     ## ######## ##    ## ########    ###    ######## ####  #######  ##    ##
+####     ##     ## ##     ## ##    ## ##     ## ###   ### ##       ###   ##    ##      ## ##      ##     ##  ##     ## ###   ##
+######   ##     ## ##     ## ##       ##     ## #### #### ##       ####  ##    ##     ##   ##     ##     ##  ##     ## ####  ##
+######## ##     ## ##     ## ##       ##     ## ## ### ## ######   ## ## ##    ##    ##     ##    ##     ##  ##     ## ## ## ##
+######   ##     ## ##     ## ##       ##     ## ##     ## ##       ##  ####    ##    #########    ##     ##  ##     ## ##  ####
+####     ##     ## ##     ## ##    ## ##     ## ##     ## ##       ##   ###    ##    ##     ##    ##     ##  ##     ## ##   ###
+##       ########   #######   ######   #######  ##     ## ######## ##    ##    ##    ##     ##    ##    ####  #######  ##    ##
+
+README: util\createdoc.lua
+	util\lua util\createdoc.lua txt > $@
+
+README.html: util\createdoc.lua
+	util\lua util\createdoc.lua html > $@
+
+README.md: util\createdoc.lua
+	util\lua util\createdoc.lua md > $@
 
 ##       #### ##    ##  ######  ########    ###    ##       ##
 ####      ##  ###   ## ##    ##    ##      ## ##   ##       ##
